<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
     <CheckBoxPreference
         android:key="loadondemand"
         android:title="@string/load_on_demand"
         android:summaryOn="@string/load_on_demand_summaryOn"
         android:summaryOff="@string/load_on_demand_summaryOff"
         android:defaultValue="true" />
     <CheckBoxPreference 
         android:key="loadifold"
         android:title="@string/load_if_old"
         android:defaultValue="true"
         android:dependency="loadondemand" />
     <EditTextPreference
         android:key="olderthan"
         android:inputType="number"
         android:numeric="integer"
         android:title="@string/old_dialog_title"
         android:dialogTitle="@string/old_dialog_title"
         android:dialogMessage="@string/old_dialog_message"
         android:defaultValue="10"
         android:dependency="loadifold" />
     <CheckBoxPreference
         android:key="saveloaddate"
         android:defaultValue="true"
         android:title="@string/last_updated_over"
         android:summaryOn="@string/last_updated_over_summaryOn"
         android:summaryOff="@string/last_updated_over_summaryOff" />
</PreferenceScreen>