<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/attributeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/attribute_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/valueMin"
        android:tag="D3ItemValueRange.min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/attributeName"
        android:text="@string/value_min"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/valueMax"
        android:tag="D3ItemValueRange.max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/attributeName"
        android:text="@string/value_max"
        android:textAppearance="?android:attr/textAppearanceSmall" />
</RelativeLayout>