<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/runeIcon"
        android:contentDescription="@string/cd_rune_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/runeName"
        android:tag="D3Rune.name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/runeIcon"
        android:text="@string/rune_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/runeDescription"
        android:tag="D3Rune.description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/runeName"
        android:layout_below="@+id/runeName"
        android:text="@string/rune_description"
        android:textAppearance="?android:attr/textAppearanceSmall" />
</RelativeLayout>