<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<TextView
        android:id="@+id/labelHost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battlehost"
        android:textAppearance="?android:attr/textAppearanceLarge" />
<Spinner
        android:id="@+id/spinHosts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/battlehosts" />

    <TextView
        android:id="@+id/labelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battlename"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/labelTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battletag"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/btValidate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickValidate"
        android:text="@android:string/ok" />

</LinearLayout>